# lvgl_demo2

./: CMakeLists.txt  cat.sh  lv_conf_stm32.h
app/: CMakeLists.txt
app/fonts/: dejavu_12_ru.c  dejavu_14_ru.c  dejavu_18_ru.c  dejavu_20_ru.c  dejavu_24_ru.c
pc/: CMakeLists.txt  main_pc.c
src/: app.c
src/fonts/: dejavu_10_ru.c  dejavu_16_ru.c  dejavu_22_ru.c  dejavu_26_ru.c  dejavu_28_ru.c
